Bug 392843 - Album art not displayed
Summary: Album art not displayed
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.1
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-07 21:20 UTC by Gerald Cox
Modified: 2018-04-17 09:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Cox 2018-04-07 21:20:21 UTC
My album art resides in each music subdirectory as:  folder.jpg

Artwork is not displayed in Elisa.  Works fine in qmmp, amarok, rhythmbox, etc.
Comment 1 Gerald Cox 2018-04-14 18:53:11 UTC
Album art issue being addressed here:

https://phabricator.kde.org/D12158
Comment 2 Alexander Stippich 2018-04-16 17:29:16 UTC
Git commit c3481ab826fc01265e0c6db3df709a926792afd3 by Alexander Stippich.
Committed on 16/04/2018 at 17:29.
Pushed by astippich into branch 'master'.

search for more cover names in directory

Summary:
make the way we search for cover files a little bit more extensible and add "folder.{png|jpg}" to the list

Reviewers: #elisa, mgallien

Reviewed By: #elisa, mgallien

Subscribers: mgallien

Differential Revision: https://phabricator.kde.org/D12158

M  +9    -8    src/abstractfile/abstractfilelisting.cpp

https://commits.kde.org/elisa/c3481ab826fc01265e0c6db3df709a926792afd3
Comment 3 Matthieu Gallien 2018-04-17 09:00:40 UTC
Git commit c5bc98873d75c7f8404d3c797aa2b458a7ed9a65 by Matthieu Gallien, on behalf of Alexander Stippich.
Committed on 16/04/2018 at 20:30.
Pushed by mgallien into branch '0.1'.

search for more cover names in directory

Summary:
make the way we search for cover files a little bit more extensible and add "folder.{png|jpg}" to the list

Reviewers: #elisa, mgallien

Reviewed By: #elisa, mgallien

Subscribers: mgallien

Differential Revision: https://phabricator.kde.org/D12158

M  +9    -8    src/abstractfile/abstractfilelisting.cpp

https://commits.kde.org/elisa/c5bc98873d75c7f8404d3c797aa2b458a7ed9a65