search for more cover names in directory

Summary:
make the way we search for cover files a little bit more extensible and add "folder.{png|jpg}" to the list

BUG: 392843

Reviewers: #elisa, mgallien

Reviewed By: #elisa, mgallien

Subscribers: mgallien

Differential Revision: https://phabricator.kde.org/D12158